# tx-spamer

./: Cargo.toml  README.md  config.json  transaction.config.json
src/: main.rs
src/utils/: config.rs
