[package]
name = "tx-spamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["ws"] } # Using WebSocket provider
eyre = "0.6"
serde_json = "1.0.99"
hex = "0.4.3"
serde = { version = "1.0.104", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
web3 = "0.19.0"
futures = "0.3.15"
ethereum-tx-sign = "6.1.2"
